--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "dotenv-cli": "^4.1.1",
     "eslint-config-prettier": "^8.3.0",
     "husky": ">=6",
